// Vitest Snapshot v1

exports[`Deselect 1`] = `
"<div wrap=\\"true\\" class=\\"dodoSelectButtons-Select dodoSelectButtons-multiple\\"><button style=\\"--bnt-rgb: 58,134,255;\\" type=\\"button\\" class=\\"dodoButton dodoButton-default dodoButton-active dodoButton-rounded\\">
    <div class=\\"dodoButton-content\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option one
    </div>
    <!--v-if-->
  </button><button style=\\"--bnt-rgb: 58,134,255;\\" type=\\"button\\" class=\\"dodoButton dodoButton-default dodoButton-active dodoButton-rounded\\">
    <div class=\\"dodoButton-content\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option two
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"dodoButton dodoButton-default dodoButton-rounded\\">
    <div class=\\"dodoButton-content\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option three
    </div>
    <!--v-if-->
  </button></div>"
`;

exports[`Select a value 1`] = `
"<div wrap=\\"false\\" class=\\"dodoSelectButtons-Select\\"><button style=\\"--bnt-rgb: 58,134,255;\\" type=\\"button\\" class=\\"dodoButton dodoButton-default dodoButton-active dodoButton-rounded\\">
    <div class=\\"dodoButton-content\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option one
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"dodoButton dodoButton-default dodoButton-rounded\\">
    <div class=\\"dodoButton-content\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option two
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"dodoButton dodoButton-default dodoButton-rounded\\">
    <div class=\\"dodoButton-content\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option three
    </div>
    <!--v-if-->
  </button></div>"
`;

exports[`Select multiple 1`] = `
"<div wrap=\\"true\\" class=\\"dodoSelectButtons-Select dodoSelectButtons-multiple\\"><button style=\\"--bnt-rgb: 58,134,255;\\" type=\\"button\\" class=\\"dodoButton dodoButton-default dodoButton-active dodoButton-rounded\\">
    <div class=\\"dodoButton-content\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option one
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"dodoButton dodoButton-default dodoButton-rounded\\">
    <div class=\\"dodoButton-content\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option two
    </div>
    <!--v-if-->
  </button><button type=\\"button\\" class=\\"dodoButton dodoButton-default dodoButton-rounded\\">
    <div class=\\"dodoButton-content\\">
      <!--
        @slot Menu Item footer
        @binding {object} option icon of the menu item
        @binding {string} index text of the menu item
      -->Option three
    </div>
    <!--v-if-->
  </button></div>"
`;
